--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "~7.21.0",
     "eslint-config-prettier": "~8.1.0",
     "eslint-plugin-jest": "~24.1.5",
+    "eslint-plugin-prettier": "^3.3.1",
     "jest": "~26.6.3",
     "prettier": "~2.2.1",
     "rimraf": "~3.0.2",
@@ -34,6 +35,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "instagram-private-api": "^1.44.0",
+    "jimp": "^0.16.1",
     "tslib": "~2.1.0"
   },
   "volta": {
