--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-typescript-boilerplate",
+  "name": "memeship",
   "version": "0.0.0",
-  "description": "Minimalistic boilerplate to quick-start Node.js development in TypeScript.",
+  "description": "Automate sending memes to your friends",
   "engines": {
     "node": ">= 14.16 <15"
   },
@@ -14,7 +14,9 @@
     "eslint-config-prettier": "~8.1.0",
     "eslint-plugin-jest": "~24.1.5",
     "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^4.3.8",
     "jest": "~26.6.3",
+    "lint-staged": "^10.5.4",
     "prettier": "~2.2.1",
     "rimraf": "~3.0.2",
     "ts-jest": "~26.5.2",
@@ -40,5 +42,16 @@
   },
   "volta": {
     "node": "14.16.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.ts": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
