--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build": "tsc -p tsconfig.release.json",
     "build:watch": "tsc -w -p tsconfig.release.json",
     "lint": "eslint . --ext .ts,.tsx",
-    "test": "jest --coverage",
+    "test": "jest",
     "test:watch": "jest --watch"
   },
   "author": "Jakub Synowiec <github@jakubsynowiec.info>",
@@ -50,8 +50,7 @@
   },
   "lint-staged": {
     "**/*.ts": [
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ]
   }
 }
