fix: hash not working

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
     - uses: actions/cache@v2
       with:
         path: build/src/cache/cache.json
-        key: cache-${{hashFiles('build/src/cache/cache.json')}}
+        key: cache-${{ hashFiles('**/cache.json') }}
 
     - run: npm run start
       env:
