--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": ">= 14.16 <15"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.0.1",
     "@types/jest": "~26.0.20",
     "@types/node": "~14.14.31",
     "@typescript-eslint/eslint-plugin": "~4.16.1",
@@ -30,14 +31,19 @@
     "build:watch": "tsc -w -p tsconfig.release.json",
     "lint": "eslint . --ext .ts,.tsx",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "config:generate": "npm run build && node build/src/config.js -g",
+    "config:encrypt": "npm run build && node build/src/config.js -e",
+    "config:decrypt": "npm run build && node build/src/config.js -d"
   },
   "author": "Jakub Synowiec <github@jakubsynowiec.info>",
   "license": "Apache-2.0",
   "dependencies": {
     "axios": "^0.21.1",
+    "commander": "^7.2.0",
     "instagram-private-api": "^1.44.0",
     "jimp": "^0.16.1",
+    "simple-encryptor": "^4.0.0",
     "tslib": "~2.1.0"
   },
   "volta": {
