--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ jobs:
     env:
       IG_USERNAME: ${{secrets.IG_USERNAME}}
       IG_PASSWORD: ${{secrets.IG_PASSWORD}}
+      SECRET_KEY: ${{secrets.SECRET_KEY}}
+      CI: true
     steps:
     - uses: actions/checkout@v2
     - uses: volta-cli/action@v1
@@ -24,13 +26,9 @@ jobs:
           ${{ runner.os }}-node-
     - run: npm ci --no-audit
     - run: npm run build --if-present
-
-    - uses: actions/cache@v2
-      with:
-        path: build/src/cache/cache.json
-        key: cache-${{ hashFiles('**/cache.json') }}
-
     - run: npm run start
-      env:
-        CI: true
+    - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Update cache.encrypt
+
 
