--- a/.github/workflows/memez.yml
+++ b/.github/workflows/memez.yml
@@ -1,8 +1,9 @@
 name: Memez
 
 on:
-  schedule:
-    - cron: "40 */1 * * *"
+  # uncomment following lines
+  #schedule:
+  #  - cron: "40 */1 * * *"
   workflow_dispatch:
 
 jobs:
