--- a/.github/workflows/memez.yml
+++ b/.github/workflows/memez.yml
@@ -2,8 +2,8 @@ name: Memez
 
 on:
   # uncomment following lines
-  #schedule:
-  #  - cron: "40 */1 * * *"
+  schedule:
+    - cron: "40 */1 * * *"
   workflow_dispatch:
 
 jobs:
